--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
   <div><a href="/" class="logo">Aaron's Sketchbook</a></div>
+  <nav class="main-menu">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/work">Work</a></li>
+    </ul>
+  </nav>
 	<!--<script src="assets/scripts/main.js"></script>-->
 
 </body>
