--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Aaron's Sketchbook</title>
-	<!--<link rel="stylesheet" href="assets/styles/main.css">-->
+	<link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
-  <header>
-    <div><a href="/" class="logo">Aaron's Sketchbook</a></div>
+  <header class="site-header">
+    <div class="logo-container">
+      <a href="/" class="logo">Aaron's Sketchbook</a>
+    </div>
     <nav class="main-menu">
       <ul>
         <li><a href="/">Home</a></li>
