--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Aaron's Sketchbook</title>
+	<title>A place to put my artwork - Aaron's Sketchbook</title>
 	<link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
