Continuing hompage structure

--- a/index.html
+++ b/index.html
@@ -7,19 +7,71 @@
 	<link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
-  <header class="site-header">
-    <div class="logo-container">
-      <a href="/" class="logo">Aaron's Sketchbook</a>
-    </div>
-    <nav class="main-menu">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/work">Work</a></li>
-      </ul>
-    </nav>
-  </header>
-	<!--<script src="assets/scripts/main.js"></script>-->
+  <div class="wrapper container">
+		<header class="site-header">
+	    <div class="logo-container">
+	      <a href="/" class="logo">Aaron's Sketchbook</a>
+	    </div>
+	    <nav class="main-menu">
+	      <ul>
+	        <li><a href="/">Home</a></li>
+	        <li><a href="/about">About</a></li>
+	        <li><a href="/work">Work</a></li>
+					<li><a href="/shop">Shop</a></li>
+	      </ul>
+	    </nav>
+	  </header>
 
+		<!-- Home Work -->
+		<p class="home-intro">With a pen always on hand, I have a tendency to create a lot of art. This website gives me a place to put that art.</p>
+
+		<!-- Sample Work -->
+		<section class="home-work">
+			<div class="work-grid">
+				<!-- Item 1 -->
+				<a href="" class="work-item">
+					<img class="work-image" src="https://via.placeholder.com/500" />
+					<h2 class="work-title">Work Title</h2>
+				</a>
+
+				<!-- Item 2 -->
+				<a href="" class="work-item">
+					<img class="work-image" src="https://via.placeholder.com/500" />
+					<h2 class="work-title">Work Title</h2>
+				</a>
+
+				<!-- Item 3 -->
+				<a href="" class="work-item">
+					<img class="work-image" src="https://via.placeholder.com/500" />
+					<h2 class="work-title">Work Title</h2>
+				</a>
+
+				<!-- Item 4 -->
+				<a href="" class="work-item">
+					<img class="work-image" src="https://via.placeholder.com/500" />
+					<h2 class="work-title">Work Title</h2>
+				</a>
+
+				<!-- Item 5 -->
+				<a href="" class="work-item">
+					<img class="work-image" src="https://via.placeholder.com/500" />
+					<h2 class="work-title">Work Title</h2>
+				</a>
+
+				<!-- Item 6 -->
+				<a href="" class="work-item">
+					<img class="work-image" src="https://via.placeholder.com/500" />
+					<h2 class="work-title">Work Title</h2>
+				</a>
+
+				<!-- Item 7 -->
+				<a href="" class="work-item">
+					<img class="work-image" src="https://via.placeholder.com/500" />
+					<h2 class="work-title">Work Title</h2>
+				</a>
+			</div>
+		</section>
+	</div>
+	<!--<script src="assets/scripts/main.js"></script>-->
 </body>
 </html>
