Adjusting form for testing

--- a/about/index.html
+++ b/about/index.html
@@ -25,25 +25,19 @@
 		<!-- Form -->
 		<form name="contact" method="POST" netlify>
 		  <p>
-		    <label>Your Name: <input type="text" name="name" /></label>
+		    <label>Name: <input type="text" name="name" /></label>
 		  </p>
 		  <p>
-		    <label>Your Email: <input type="email" name="email" /></label>
-		  </p>
-		  <p>
-		    <label>Your Role: <select name="role[]" multiple>
-		      <option value="leader">Leader</option>
-		      <option value="follower">Follower</option>
-		    </select></label>
+		    <label>Email Address: <input type="email" name="email" /></label>
 		  </p>
 		  <p>
 		    <label>Message: <textarea name="message"></textarea></label>
 		  </p>
 		  <p>
-		    <button type="submit">Send</button>
+		    <button type="submit">Submit</button>
 		  </p>
 		</form>
-		
+
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
 	<!--<script src="assets/scripts/main.js"></script>-->
