Standard build adjustments

--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
 		<!-- Sample Work -->
 		<section class="home-work">
 			<div class="work-grid">
+
 				<!-- Item 1 -->
-				<a href="" class="work-item">
+				<a href="/work/fox/" class="work-item fox">
 					<img class="work-image" src="https://via.placeholder.com/500" />
-					<h2 class="work-title">Work Title</h2>
+					<h2 class="work-title">Fox</h2>
 				</a>
 
 				<!-- Item 2 -->
-				<a href="" class="work-item">
+				<a href="/work/hole" class="work-item hole">
 					<img class="work-image" src="https://via.placeholder.com/500" />
-					<h2 class="work-title">Work Title</h2>
+					<h2 class="work-title">Hole</h2>
 				</a>
 
 				<!-- Item 3 -->
