--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 	    <nav class="main-menu">
 	      <ul>
 	        <li><a href="/">Home</a></li>
-	        <li><a href="/about">About</a></li>
+	        <li><a class="active" href="/about">About</a></li>
 	        <li><a href="/work">Work</a></li>
 					<li><a href="/shop">Shop</a></li>
 	      </ul>
