--- a/shop/index.html
+++ b/shop/index.html
@@ -17,7 +17,7 @@
 	        <li><a href="/">Home</a></li>
 	        <li><a href="/about">About</a></li>
 	        <li><a href="/work">Work</a></li>
-					<li><a href="/shop">Shop</a></li>
+					<li><a class="active" href="/shop">Shop</a></li>
 	      </ul>
 	    </nav>
 	  </header>
