--- a/work/index.html
+++ b/work/index.html
@@ -16,7 +16,7 @@
 	      <ul>
 	        <li><a href="/">Home</a></li>
 	        <li><a href="/about">About</a></li>
-	        <li><a href="/work">Work</a></li>
+	        <li><a class="active" href="/work">Work</a></li>
 					<li><a href="/shop">Shop</a></li>
 	      </ul>
 	    </nav>
