--- a/index.html
+++ b/index.html
@@ -27,17 +27,22 @@
 
 		<!-- Sample Work -->
 		<section class="home-work">
-			<div class="work-grid">
+			<ul class="work-filter">
+				<li><a href="#">Animals</a></li>
+				<li><a href="#">Floral</a></li>
+				<li><a href="#">Abstract</a></li>
+			</ul>
 
+			<div class="work-grid">
 				<!-- Item 1 -->
 				<a href="/work/fox/" class="work-item fox">
-					<img class="work-image" src="https://via.placeholder.com/500" />
+					<img class="work-image" src="/assets/images/work/work-fox-thumb.jpg" />
 					<h2 class="work-title">Fox</h2>
 				</a>
 
 				<!-- Item 2 -->
 				<a href="/work/hole" class="work-item hole">
-					<img class="work-image" src="https://via.placeholder.com/500" />
+					<img class="work-image" src="/assets/images/work/work-hole-thumb.jpg" />
 					<h2 class="work-title">Hole</h2>
 				</a>
 
