Adding Eyes Work

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				</a>
 
 				<!-- Item 3 -->
-				<a href="" class="work-item">
-					<img class="work-image" src="https://via.placeholder.com/500" />
+				<a href="/work/eyes" class="work-item">
+					<img class="work-image" src="/assets/images/work/work-eyes-thumb.jpg" />
 					<h2 class="work-title">Work Title</h2>
 				</a>
 
