Mobile styles for navigation

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<!-- Item 1 -->
 				<a href="/work/fox/" class="work-item fox">
 					<img class="work-image" src="/assets/images/work/work-fox-thumb.jpg" />
-					<h2 class="work-title">Fox</h2>
+					<h2 class="work-title">Animal - Fox</h2>
 				</a>
 
 				<!-- Item 2 -->
@@ -49,7 +49,7 @@
 				<!-- Item 3 -->
 				<a href="/work/eyes" class="work-item">
 					<img class="work-image" src="/assets/images/work/work-eyes-thumb.jpg" />
-					<h2 class="work-title">Work Title</h2>
+					<h2 class="work-title">Sketchbook - Eyes</h2>
 				</a>
 
 				<!-- Item 4 -->
