--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 				</a>
 
 				<!-- Item 4 -->
-				<a href="" class="work-item">
-					<img class="work-image" src="https://via.placeholder.com/500" />
-					<h2 class="work-title">Work Title</h2>
+				<a href="/work/hair" class="work-item">
+					<img class="work-image" src="/assets/images/work/work-hair-thumb.jpg" />
+					<h2 class="work-title">Hair</h2>
 				</a>
 
 				<!-- Item 5 -->
