Add home intro link and style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	  </header>
 
 		<!-- Home Work -->
-		<p class="home-intro">With a pen always on hand, I have a tendency to create a lot of art. This website gives me a place to put that art.</p>
+		<p class="home-intro">With a pen always on hand, I have a tendency to create a lot of <a href="/work">art</a>. This website gives me a place to put that art.</p>
 
 		<!-- Sample Work -->
 		<section class="home-work">
