Adding Isotope and Footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="wrapper container">
+		<!-- Header -->
 		<header class="site-header">
 	    <div class="logo-container">
 	      <a href="/" class="logo">Aaron's Sketchbook</a>
@@ -21,63 +22,79 @@
 	      </ul>
 	    </nav>
 	  </header>
+		<!-- End Header -->
 
-		<!-- Home Work -->
-		<p class="home-intro">With a pen always on hand, I have a tendency to create a lot of <a href="/work">art</a>. This website gives me a place to put that art.</p>
+		<!-- Content -->
+		<div class="site-content">
+			<!-- Home Work -->
+			<p class="home-intro">With a pen always on hand, I have a tendency to create a lot of <a href="/work">art</a>. This website gives me a place to put that art.</p>
 
-		<!-- Sample Work -->
-		<section class="home-work">
-			<ul class="work-filter">
-				<li><a href="#">Animals</a></li>
-				<li><a href="#">Floral</a></li>
-				<li><a href="#">Abstract</a></li>
-			</ul>
+			<!-- Sample Work -->
+			<section class="home-work">
+				<div class="work-grid">
+					<!-- Item 1 -->
+					<a href="/work/fox/" class="work-item fox animal" >
+						<img class="work-image" src="/assets/images/work/work-fox-thumb.jpg" />
+						<h2 class="work-title">Animal - Fox</h2>
+					</a>
 
-			<div class="work-grid">
-				<!-- Item 1 -->
-				<a href="/work/fox/" class="work-item fox">
-					<img class="work-image" src="/assets/images/work/work-fox-thumb.jpg" />
-					<h2 class="work-title">Animal - Fox</h2>
-				</a>
+					<!-- Item 2 -->
+					<a href="/work/hole" class="work-item hole abstract">
+						<img class="work-image" src="/assets/images/work/work-hole-thumb.jpg" />
+						<h2 class="work-title">Hole</h2>
+					</a>
 
-				<!-- Item 2 -->
-				<a href="/work/hole" class="work-item hole">
-					<img class="work-image" src="/assets/images/work/work-hole-thumb.jpg" />
-					<h2 class="work-title">Hole</h2>
-				</a>
+					<!-- Item 3 -->
+					<a href="/work/eyes" class="work-item eyes abstract">
+						<img class="work-image" src="/assets/images/work/work-eyes-thumb.jpg" />
+						<h2 class="work-title">Sketchbook - Eyes</h2>
+					</a>
 
-				<!-- Item 3 -->
-				<a href="/work/eyes" class="work-item">
-					<img class="work-image" src="/assets/images/work/work-eyes-thumb.jpg" />
-					<h2 class="work-title">Sketchbook - Eyes</h2>
-				</a>
+					<!-- Item 4 -->
+					<a href="/work/hair" class="work-item hair abstract">
+						<img class="work-image" src="/assets/images/work/work-hair-thumb.jpg" />
+						<h2 class="work-title">Hair</h2>
+					</a>
 
-				<!-- Item 4 -->
-				<a href="/work/hair" class="work-item">
-					<img class="work-image" src="/assets/images/work/work-hair-thumb.jpg" />
-					<h2 class="work-title">Hair</h2>
-				</a>
+					<!-- Item 5 -->
+					<a href="" class="work-item floral">
+						<img class="work-image" src="https://via.placeholder.com/500" />
+						<h2 class="work-title">Work Title</h2>
+					</a>
 
-				<!-- Item 5 -->
-				<a href="" class="work-item">
-					<img class="work-image" src="https://via.placeholder.com/500" />
-					<h2 class="work-title">Work Title</h2>
-				</a>
+					<!-- Item 6 -->
+					<a href="" class="work-item animal">
+						<img class="work-image" src="https://via.placeholder.com/500" />
+						<h2 class="work-title">Work Title</h2>
+					</a>
 
-				<!-- Item 6 -->
-				<a href="" class="work-item">
-					<img class="work-image" src="https://via.placeholder.com/500" />
-					<h2 class="work-title">Work Title</h2>
-				</a>
+					<!-- Item 7 -->
+					<a href="" class="work-item animal">
+						<img class="work-image" src="https://via.placeholder.com/500" />
+						<h2 class="work-title">Work Title</h2>
+					</a>
 
-				<!-- Item 7 -->
-				<a href="" class="work-item">
-					<img class="work-image" src="https://via.placeholder.com/500" />
-					<h2 class="work-title">Work Title</h2>
-				</a>
+					<!-- Item 8 -->
+					<a href="" class="work-item abstract">
+						<img class="work-image" src="https://via.placeholder.com/500" />
+						<h2 class="work-title">Work Title</h2>
+					</a>
+				</div>
+			</section>
+		</div>
+		<!-- End Content -->
+
+		<!-- Footer -->
+		<div class="site-footer">
+			<div class="copyright">
+				<p>Copyright &copy; Aaron's Sketchbook</p>
 			</div>
-		</section>
+			<div class="footer-social">
+				<a href="#" class="social social-instagram">Instagram</a>
+			</div>
+		</div>
+		<!-- End Footer -->
 	</div>
-	<!--<script src="assets/scripts/main.js"></script>-->
+
 </body>
 </html>
