--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="wrapper container">
+		<!-- Header -->
 		<header class="site-header">
 	    <div class="logo-container">
 	      <a href="/" class="logo">Aaron's Sketchbook</a>
@@ -21,24 +22,41 @@
 	      </ul>
 	    </nav>
 	  </header>
+		<!-- End Header -->
 
-		<!-- Form -->
-		<form name="contact" method="POST" netlify>
-		  <p>
-		    <label>Name: <input type="text" name="name" /></label>
-		  </p>
-		  <p>
-		    <label>Email Address: <input type="email" name="email" /></label>
-		  </p>
-		  <p>
-		    <label>Message: <textarea name="message"></textarea></label>
-		  </p>
-		  <p>
-		    <button type="submit">Submit</button>
-		  </p>
-		</form>
+		<!-- Content -->
+		<div class="site-content">
+			<!-- Form -->
+			<form name="contact" method="POST" netlify>
+			  <p>
+			    <label>Name: <input type="text" name="name" /></label>
+			  </p>
+			  <p>
+			    <label>Email Address: <input type="email" name="email" /></label>
+			  </p>
+			  <p>
+			    <label>Message: <textarea name="message"></textarea></label>
+			  </p>
+			  <p>
+			    <button type="submit">Submit</button>
+			  </p>
+			</form>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<!-- End Content -->
+
+		<!-- Footer -->
+		<div class="site-footer">
+			<div class="copyright">
+				<p>Copyright &copy; Aaron's Sketchbook</p>
+			</div>
+			<div class="footer-social">
+				<a href="#" class="social social-instagram">Instagram</a>
+			</div>
+		</div>
+		<!-- End Footer -->
+
 	</div>
 	<!--<script src="assets/scripts/main.js"></script>-->
 </body>
