--- a/shop/index.html
+++ b/shop/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="wrapper container">
+		<!-- Header -->
 		<header class="site-header">
 	    <div class="logo-container">
 	      <a href="/" class="logo">Aaron's Sketchbook</a>
@@ -21,9 +22,25 @@
 	      </ul>
 	    </nav>
 	  </header>
+		<!-- End Header -->
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<!-- Content -->
+		<div class="site-content">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<!-- End Content -->
+
+		<!-- Footer -->
+		<div class="footer">
+			<div class="copyright">
+				<p>Copyright &copy; Aaron's Sketchbook</p>
+			</div>
+			<div class="footer-social">
+				<a href="#" class="social social-instagram">Instagram</a>
+			</div>
+		</div>
+		<!-- End Footer -->
 	</div>
-	<!--<script src="assets/scripts/main.js"></script>-->
+	
 </body>
 </html>
