--- a/work/index.html
+++ b/work/index.html
@@ -38,7 +38,7 @@
 
 				<div class="work-grid">
 					<!-- Item 1 -->
-					<a href="/work/fox/" class="work-item fox animal" >
+					<a href="/work/fox/" class="work-item fox floral animal" >
 						<img class="work-image" src="/assets/images/work/work-fox-thumb.jpg" />
 						<h2 class="work-title">Animal - Fox</h2>
 					</a>
@@ -62,39 +62,39 @@
 					</a>
 
 					<!-- Item 5 -->
-					<a href="" class="work-item floral">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/pineapple" class="work-item pineapple abstract">
+						<img class="work-image" src="/assets/images/work/work-pineapple-thumb.jpg" />
+						<h2 class="work-title">Pineapple</h2>
 					</a>
 
 					<!-- Item 6 -->
-					<a href="" class="work-item animal">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/shoes" class="work-item shoes floral">
+						<img class="work-image" src="/assets/images/work/work-shoes-thumb.jpg" />
+						<h2 class="work-title">Shoes</h2>
 					</a>
 
 					<!-- Item 7 -->
-					<a href="" class="work-item animal">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/bunny" class="work-item bunny floral animal">
+						<img class="work-image" src="/assets/images/work/work-bunny-thumb.jpg" />
+						<h2 class="work-title">Floppy</h2>
 					</a>
 
 					<!-- Item 8 -->
-					<a href="" class="work-item abstract">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/monsters" class="work-item monster abstract">
+						<img class="work-image" src="/assets/images/work/work-monsters-thumb.jpg" />
+						<h2 class="work-title">Sketchbook - Monsters</h2>
 					</a>
 
 					<!-- Item 9 -->
-					<a href="" class="work-item floral">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/squirrel" class="work-item squirrel animal abstract">
+						<img class="work-image" src="/assets/images/work/work-squirrel-thumb.jpg" />
+						<h2 class="work-title">Squirrel</h2>
 					</a>
 
 					<!-- Item 10 -->
-					<a href="" class="work-item animal">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/floral-ball-1" class="work-item floral-ball-1 floral">
+						<img class="work-image" src="/assets/images/work/work-floral-1-thumb.jpg" />
+						<h2 class="work-title">Floral Ball #1</h2>
 					</a>
 
 					<!-- Item 11 -->
