Adding work and beginning about content

--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,14 @@
 
 		<!-- Content -->
 		<div class="site-content">
-			<!-- Form -->
+
+			<!-- About Intro -->
+			<p class="page-intro">If you haven't figured it out yet, my name is <span>Aaron</span>. During the day, I'm a graphic designer, but at night, I'm an illustrator. </p>
+
+			<!-- About Content -->
+			<p>Let's get serious though. My name is Aaron Greene. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<!-- About Form -->
 			<form name="contact" method="POST" netlify>
 			  <p>
 			    <label>Name: <input type="text" name="name" /></label>
@@ -42,7 +49,6 @@
 			  </p>
 			</form>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 		<!-- End Content -->
 
