--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
 		<!-- Content -->
 		<div class="site-content">
-			<!-- Home Work -->
-			<p class="home-intro">With a pen always on hand, I have a tendency to create a lot of <a href="/work">art</a>. This website gives me a place to put that art.</p>
+
+			<!-- Home Intro -->
+			<p class="page-intro">With a pen always on hand, I have a tendency to create a lot of <a href="/work">art</a>. This website gives me a place to put that art.</p>
 
 			<!-- Sample Work -->
 			<section class="home-work">
@@ -57,21 +58,21 @@
 					</a>
 
 					<!-- Item 5 -->
-					<a href="" class="work-item floral">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/shoes" class="work-item floral">
+						<img class="work-image" src="/assets/images/work/work-shoes-thumb.jpg" />
+						<h2 class="work-title">Shoes</h2>
 					</a>
 
 					<!-- Item 6 -->
-					<a href="" class="work-item animal">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/floral-ball-4" class="work-item animal">
+						<img class="work-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
+						<h2 class="work-title">Floral Ball #4</h2>
 					</a>
 
 					<!-- Item 7 -->
-					<a href="" class="work-item animal">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/bushman" class="work-item animal">
+						<img class="work-image" src="/assets/images/work/work-bushman-thumb.jpg" />
+						<h2 class="work-title">Bush Man</h2>
 					</a>
 
 					<!-- Item 8 -->
