--- a/work/index.html
+++ b/work/index.html
@@ -98,15 +98,15 @@
 					</a>
 
 					<!-- Item 11 -->
-					<a href="" class="work-item animal">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="" class="work-item Floral">
+						<img class="work-image" src="/assets/images/work/work-bushman-thumb.jpg" />
+						<h2 class="work-title">Bush Man</h2>
 					</a>
 
 					<!-- Item 12 -->
-					<a href="" class="work-item abstract">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+					<a href="/work/floral-ball-4" class="work-item floral-ball-4 floral">
+						<img class="work-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
+						<h2 class="work-title">Floral Ball #4</h2>
 					</a>
 				</div>
 			</section>
