--- a/about/index.html
+++ b/about/index.html
@@ -28,10 +28,11 @@
 		<div class="site-content">
 
 			<!-- About Intro -->
-			<p class="page-intro">If you haven't figured it out yet, my name is <span>Aaron</span>. During the day, I'm a graphic designer, but at night, I'm an illustrator. </p>
+			<p class="page-intro">If you haven't figured it out yet, my name is <span>Aaron Greene</span> and I like to draw.</p>
 
 			<!-- About Content -->
-			<p>Let's get serious though. My name is Aaron Greene. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p class="image-right"><img src="/assets/images/profile.jpg" alt="Aaron Greene standing in front of a tree" /></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 			<!-- About Form -->
 			<form name="contact" method="POST" netlify>
