--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 	    <div class="logo-container">
 	      <a href="/" class="logo">Aaron's Sketchbook</a>
 	    </div>
+
+			<a href="#menu" class="nav-toggle"><span>Menu</span></a>
+
 	    <nav class="main-menu">
 	      <ul>
-	        <li><a href="/">Home</a></li>
+	        <li><a class="active" href="/">Home</a></li>
 	        <li><a href="/about">About</a></li>
 	        <li><a href="/work">Work</a></li>
 					<li><a href="/shop">Shop</a></li>
@@ -36,49 +39,68 @@
 					<!-- Item 1 -->
 					<a href="/work/fox/" class="work-item fox animal" >
 						<img class="work-image" src="/assets/images/work/work-fox-thumb.jpg" />
-						<h2 class="work-title">Animal - Fox</h2>
+						<div class="work-meta">
+							<h2 class="work-title">The Fox</h2>
+							<p class="work-series">Animal Series</p>
+						</div>
 					</a>
 
 					<!-- Item 2 -->
-					<a href="/work/hole" class="work-item hole abstract">
-						<img class="work-image" src="/assets/images/work/work-hole-thumb.jpg" />
-						<h2 class="work-title">Hole</h2>
+					<a href="/work/eyes" class="work-item eyes abstract">
+						<img class="work-image" src="/assets/images/work/work-eyes-thumb.jpg" />
+						<div class="work-meta">
+							<h2 class="work-title">To Gaze Upon My Soul</h2>
+							<p class="work-series">Sketchbook Series</p>
+						</div>
 					</a>
 
 					<!-- Item 3 -->
-					<a href="/work/eyes" class="work-item eyes abstract">
-						<img class="work-image" src="/assets/images/work/work-eyes-thumb.jpg" />
-						<h2 class="work-title">Sketchbook - Eyes</h2>
+					<a href="/work/hole" class="work-item hole abstract">
+						<img class="work-image" src="/assets/images/work/work-hole-thumb.jpg" />
+						<div class="work-meta">
+							<h2 class="work-title">The Hole</h2>
+						</div>
 					</a>
 
 					<!-- Item 4 -->
 					<a href="/work/hair" class="work-item hair abstract">
 						<img class="work-image" src="/assets/images/work/work-hair-thumb.jpg" />
-						<h2 class="work-title">Hair</h2>
+						<div class="work-meta">
+							<h2 class="work-title">Hair Study</h2>
+						</div>
 					</a>
 
 					<!-- Item 5 -->
 					<a href="/work/shoes" class="work-item floral">
 						<img class="work-image" src="/assets/images/work/work-shoes-thumb.jpg" />
-						<h2 class="work-title">Shoes</h2>
+						<div class="work-meta">
+							<h2 class="work-title">Shoes</h2>
+						</div>
 					</a>
 
 					<!-- Item 6 -->
 					<a href="/work/floral-ball-4" class="work-item animal">
 						<img class="work-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
-						<h2 class="work-title">Floral Ball #4</h2>
+						<div class="work-meta">
+							<h2 class="work-title">Peony Cluster</h2>
+							<p class="work-series">Floral Ball Series</p>
+						</div>
 					</a>
 
 					<!-- Item 7 -->
 					<a href="/work/bushman" class="work-item animal">
 						<img class="work-image" src="/assets/images/work/work-bushman-thumb.jpg" />
-						<h2 class="work-title">Bush Man</h2>
+						<div class="work-meta">
+							<h2 class="work-title">Bush Man</h2>
+						</div>
 					</a>
 
 					<!-- Item 8 -->
 					<a href="" class="work-item abstract">
 						<img class="work-image" src="https://via.placeholder.com/500" />
-						<h2 class="work-title">Work Title</h2>
+						<div class="work-meta">
+							<h2 class="work-title">Work Title</h2>
+						</div>
 					</a>
 				</div>
 			</section>
@@ -87,15 +109,27 @@
 
 		<!-- Footer -->
 		<div class="site-footer">
+			<div class="footer-social">
+				Follow Me on Instagram -
+				<a href="https://www.instagram.com/aarons_sketchbook" class="social social-instagram">My Art</a>
+				<a href="https://www.instagram.com/aaron0574" class="social social-instagram">My Life</a>
+			</div>
 			<div class="copyright">
 				<p>Copyright &copy; Aaron's Sketchbook</p>
-			</div>
-			<div class="footer-social">
-				<a href="#" class="social social-instagram">Instagram</a>
 			</div>
 		</div>
 		<!-- End Footer -->
 	</div>
+
+	<!-- Script -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript">
+
+		$('.nav-toggle').on( 'click', function() {
+			$('.main-menu').addClass('active');
+		});
+
+	</script>
 
 </body>
 </html>
