--- a/shop/index.html
+++ b/shop/index.html
@@ -26,21 +26,27 @@
 
 		<!-- Content -->
 		<div class="site-content">
+
+			<!-- Page Intro -->
+			<p class="page-intro">Buy something, so I can make space for more amazing pieces!</p>
+
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 		<!-- End Content -->
 
 		<!-- Footer -->
-		<div class="footer">
+		<div class="site-footer">
+			<div class="footer-social">
+				Follow Me on Instagram -
+				<a href="https://www.instagram.com/aarons_sketchbook" class="social social-instagram">My Art</a>
+				<a href="https://www.instagram.com/aaron0574" class="social social-instagram">My Life</a>
+			</div>
 			<div class="copyright">
 				<p>Copyright &copy; Aaron's Sketchbook</p>
-			</div>
-			<div class="footer-social">
-				<a href="#" class="social social-instagram">Instagram</a>
 			</div>
 		</div>
 		<!-- End Footer -->
 	</div>
-	
+
 </body>
 </html>
