--- a/work/index.html
+++ b/work/index.html
@@ -27,6 +27,8 @@
 		<!-- Content -->
 		<div class="site-content">
 
+			<p class="page-intro">Additional Text</p>
+
 			<!-- Sample Work -->
 			<section class="home-work">
 				<div class="work-filter">
@@ -145,11 +147,13 @@
 
 		<!-- Footer -->
 		<div class="site-footer">
+			<div class="footer-social">
+				Follow Me on Instagram -
+				<a href="https://www.instagram.com/aarons_sketchbook" class="social social-instagram">My Art</a>
+				<a href="https://www.instagram.com/aaron0574" class="social social-instagram">My Life</a>
+			</div>
 			<div class="copyright">
 				<p>Copyright &copy; Aaron's Sketchbook</p>
-			</div>
-			<div class="footer-social">
-				<a href="#" class="social social-instagram">Instagram</a>
 			</div>
 		</div>
 		<!-- End Footer -->
