--- a/about/index.html
+++ b/about/index.html
@@ -55,16 +55,16 @@
 
 		<!-- Footer -->
 		<div class="site-footer">
+			<div class="footer-social">
+				Follow Me on Instagram -
+				<a href="https://www.instagram.com/aarons_sketchbook" class="social social-instagram">My Art</a>
+				<a href="https://www.instagram.com/aaron0574" class="social social-instagram">My Life</a>
+			</div>
 			<div class="copyright">
 				<p>Copyright &copy; Aaron's Sketchbook</p>
 			</div>
-			<div class="footer-social">
-				<a href="#" class="social social-instagram">Instagram</a>
-			</div>
 		</div>
 		<!-- End Footer -->
-
 	</div>
-	<!--<script src="assets/scripts/main.js"></script>-->
 </body>
 </html>
