Working on shop section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!-- Content -->
 		<div class="site-content">
 
-			<!-- Home Intro -->
+			<!-- Page Intro -->
 			<p class="page-intro">With a pen always on hand, I have a tendency to create a lot of <a href="/work">art</a>. This website gives me a place to put that art.</p>
 
 			<!-- Sample Work -->
