--- a/shop/shoes/index.html
+++ b/shop/shoes/index.html
@@ -6,7 +6,7 @@
 	<title>Shoes - Sketchbook Series - Aaron's Sketchbook</title>
 	<link rel="stylesheet" href="/assets/styles/main.css">
 </head>
-<body class="work-page">
+<body class="shop-page">
   <div class="wrapper container">
 		<header class="site-header">
 	    <div class="logo-container">
@@ -22,13 +22,49 @@
 	    </nav>
 	  </header>
 
-    <div class="work">
-      <img class="shop-image" src="/assets/images/work/work-shoes.jpg" />
-      <h1>Shoes</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p><button class="btn" href="">Buy a Copy</button></p>
+    <div class="shop">
+      <div class="shop-image"><img src="/assets/images/work/work-shoes.jpg" /></div>
+			<div class="shop-content">
+				<h1 class="page-title">Shoes</h1>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<div class="purchase-options">
+					<div class="purchase-original">
+						<h2>Purchase Original</h2>
+						<p class="price">$94.99</p>
+						<p class="status">In Stock</p>
+						<p><button class="btn" href="">Buy Original</button></p>
+					</div>
+					<div class="purchase-print">
+						<h2>Purchase a Print</h2>
+						<p class="price">$24.99</p>
+						<p class="status">In Stock</p>
+						<p><button class="btn" href="">Buy a Print</button></p>
+					</div>
+				</div>
+			</div>
     </div>
+
+		<div class="shop-quality">
+			<div class="shop-quality-intro">
+				<img src="https://via.placeholder.com/500x700">
+				<h2>Explore the Details</h2>
+			</div>
+			<div class="shop-material">
+				<img src="https://via.placeholder.com/500x350">
+				<h3>High Quality Material</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
+			<div class="shop-human-touch">
+				<img src="https://via.placeholder.com/500x350">
+				<h3>Human Touch</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
+			<div class="shop-gaurantee">
+				<img src="https://via.placeholder.com/500x350">
+				<h3>Aaron's Sketchbook</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
+		</div>
 	</div>
-	<!--<script src="assets/scripts/main.js"></script>-->
 </body>
 </html>
