Building shop item page

--- a/index.html
+++ b/index.html
@@ -35,71 +35,71 @@
 
 			<!-- Sample Work -->
 			<section class="home-work">
-				<div class="work-grid">
+				<div class="card-grid">
 					<!-- Item 1 -->
-					<a href="/work/fox/" class="work-item fox animal" >
-						<img class="work-image" src="/assets/images/work/work-fox-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">The Fox</h2>
-							<p class="work-series">Animal Series</p>
+					<a href="/work/fox/" class="card-item fox animal" >
+						<img class="card-image" src="/assets/images/work/work-fox-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">The Fox</h2>
+							<p class="card-series">Animal Series</p>
 						</div>
 					</a>
 
 					<!-- Item 2 -->
-					<a href="/work/eyes" class="work-item eyes abstract">
-						<img class="work-image" src="/assets/images/work/work-eyes-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">To Gaze Upon My Soul</h2>
-							<p class="work-series">Sketchbook Series</p>
+					<a href="/work/eyes" class="card-item eyes abstract">
+						<img class="card-image" src="/assets/images/work/work-eyes-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">To Gaze Upon My Soul</h2>
+							<p class="card-series">Sketchbook Series</p>
 						</div>
 					</a>
 
 					<!-- Item 3 -->
-					<a href="/work/hole" class="work-item hole abstract">
-						<img class="work-image" src="/assets/images/work/work-hole-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">The Hole</h2>
+					<a href="/work/hole" class="card-item hole abstract">
+						<img class="card-image" src="/assets/images/work/work-hole-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">The Hole</h2>
 						</div>
 					</a>
 
 					<!-- Item 4 -->
-					<a href="/work/hair" class="work-item hair abstract">
-						<img class="work-image" src="/assets/images/work/work-hair-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Hair Study</h2>
+					<a href="/work/hair" class="card-item hair abstract">
+						<img class="card-image" src="/assets/images/work/work-hair-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Hair Study</h2>
 						</div>
 					</a>
 
 					<!-- Item 5 -->
-					<a href="/work/shoes" class="work-item floral">
-						<img class="work-image" src="/assets/images/work/work-shoes-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Shoes</h2>
+					<a href="/work/shoes" class="card-item floral">
+						<img class="card-image" src="/assets/images/work/work-shoes-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Shoes</h2>
 						</div>
 					</a>
 
 					<!-- Item 6 -->
-					<a href="/work/floral-ball-4" class="work-item animal">
-						<img class="work-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Peony Cluster</h2>
-							<p class="work-series">Floral Ball Series</p>
+					<a href="/work/floral-ball-4" class="card-item animal">
+						<img class="card-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Peony Cluster</h2>
+							<p class="card-series">Floral Ball Series</p>
 						</div>
 					</a>
 
 					<!-- Item 7 -->
-					<a href="/work/bushman" class="work-item animal">
-						<img class="work-image" src="/assets/images/work/work-bushman-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Bush Man</h2>
+					<a href="/work/bushman" class="card-item animal">
+						<img class="card-image" src="/assets/images/work/work-bushman-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Bush Man</h2>
 						</div>
 					</a>
 
 					<!-- Item 8 -->
-					<a href="" class="work-item abstract">
-						<img class="work-image" src="https://via.placeholder.com/500" />
-						<div class="work-meta">
-							<h2 class="work-title">Work Title</h2>
+					<a href="" class="card-item abstract">
+						<img class="card-image" src="https://via.placeholder.com/500" />
+						<div class="card-meta">
+							<h2 class="card-title">Work Title</h2>
 						</div>
 					</a>
 				</div>
