--- a/shop/shoes/index.html
+++ b/shop/shoes/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="shop-page">
   <div class="wrapper container">
+		<!-- Header -->
 		<header class="site-header">
 	    <div class="logo-container">
 	      <a href="/" class="logo">Aaron's Sketchbook</a>
@@ -21,8 +22,10 @@
 	      </ul>
 	    </nav>
 	  </header>
+		<!-- End Header -->
 
-    <div class="shop">
+		<!-- Content -->
+    <div class="site-content">
       <div class="shop-image"><img src="/assets/images/work/work-shoes.jpg" /></div>
 			<div class="shop-content">
 				<h1 class="page-title">Shoes</h1>
