--- a/work/index.html
+++ b/work/index.html
@@ -38,106 +38,106 @@
 					<button class="filter" data-filter=".abstract">Abstract</button>
 				</div>
 
-				<div class="work-grid">
+				<div class="card-grid">
 					<!-- Item 1 -->
-					<a href="/work/fox/" class="work-item fox floral animal" >
-						<img class="work-image" src="/assets/images/work/work-fox-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">The Fox</h2>
-							<p class="work-series"></p>
+					<a href="/work/fox/" class="card-item fox floral animal" >
+						<img class="card-image" src="/assets/images/work/work-fox-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">The Fox</h2>
+							<p class="card-series"></p>
 						</div>
 					</a>
 
 					<!-- Item 2 -->
-					<a href="/work/hole" class="work-item hole abstract">
-						<img class="work-image" src="/assets/images/work/work-hole-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">The Hole</h2>
+					<a href="/work/hole" class="card-item hole abstract">
+						<img class="card-image" src="/assets/images/work/work-hole-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">The Hole</h2>
 						</div>
 					</a>
 
 					<!-- Item 3 -->
-					<a href="/work/eyes" class="work-item eyes abstract">
-						<img class="work-image" src="/assets/images/work/work-eyes-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Sketchbook - Eyes</h2>
-							<p class="work-series"></p>
+					<a href="/work/eyes" class="card-item eyes abstract">
+						<img class="card-image" src="/assets/images/work/work-eyes-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Sketchbook - Eyes</h2>
+							<p class="card-series"></p>
 						</div>
 					</a>
 
 					<!-- Item 4 -->
-					<a href="/work/hair" class="work-item hair abstract">
-						<img class="work-image" src="/assets/images/work/work-hair-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Hair</h2>
+					<a href="/work/hair" class="card-item hair abstract">
+						<img class="card-image" src="/assets/images/work/work-hair-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Hair</h2>
 						</div>
 					</a>
 
 					<!-- Item 5 -->
-					<a href="/work/pineapple" class="work-item pineapple abstract">
-						<img class="work-image" src="/assets/images/work/work-pineapple-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Pineapple</h2>
+					<a href="/work/pineapple" class="card-item pineapple abstract">
+						<img class="card-image" src="/assets/images/work/work-pineapple-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Pineapple</h2>
 						</div>
 					</a>
 
 					<!-- Item 6 -->
-					<a href="/work/floral-ball-1" class="work-item floral-ball-1 floral">
-						<img class="work-image" src="/assets/images/work/work-floral-1-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Floral Ball #1</h2>
-							<p class="work-series"></p>
+					<a href="/work/floral-ball-1" class="card-item floral-ball-1 floral">
+						<img class="card-image" src="/assets/images/work/work-floral-1-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Floral Ball #1</h2>
+							<p class="card-series"></p>
 						</div>
 					</a>
 
 					<!-- Item 7 -->
-					<a href="/work/shoes" class="work-item shoes floral">
-						<img class="work-image" src="/assets/images/work/work-shoes-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Shoes</h2>
+					<a href="/work/shoes" class="card-item shoes floral">
+						<img class="card-image" src="/assets/images/work/work-shoes-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Shoes</h2>
 						</div>
 					</a>
 
 					<!-- Item 8 -->
-					<a href="/work/bunny" class="work-item bunny floral animal">
-						<img class="work-image" src="/assets/images/work/work-bunny-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Floppy</h2>
-							<p class="work-series"></p>
+					<a href="/work/bunny" class="card-item bunny floral animal">
+						<img class="card-image" src="/assets/images/work/work-bunny-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Floppy</h2>
+							<p class="card-series"></p>
 						</div>
 					</a>
 
 					<!-- Item 9 -->
-					<a href="/work/monsters" class="work-item monster abstract">
-						<img class="work-image" src="/assets/images/work/work-monsters-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Sketchbook - Monsters</h2>
-							<p class="work-series"></p>
+					<a href="/work/monsters" class="card-item monster abstract">
+						<img class="card-image" src="/assets/images/work/work-monsters-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Sketchbook - Monsters</h2>
+							<p class="card-series"></p>
 						</div>
 					</a>
 
 					<!-- Item 10 -->
-					<a href="/work/squirrel" class="work-item squirrel animal abstract">
-						<img class="work-image" src="/assets/images/work/work-squirrel-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Squirrel</h2>
+					<a href="/work/squirrel" class="card-item squirrel animal abstract">
+						<img class="card-image" src="/assets/images/work/work-squirrel-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Squirrel</h2>
 						</div>
 					</a>
 
 					<!-- Item 11 -->
-					<a href="" class="work-item Floral">
-						<img class="work-image" src="/assets/images/work/work-bushman-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Bush Man</h2>
+					<a href="" class="card-item Floral">
+						<img class="card-image" src="/assets/images/work/work-bushman-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Bush Man</h2>
 						</div>
 					</a>
 
 					<!-- Item 12 -->
-					<a href="/work/floral-ball-4" class="work-item floral-ball-4 floral">
-						<img class="work-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
-						<div class="work-meta">
-							<h2 class="work-title">Floral Ball #4</h2>
-							<p class="work-series"></p>
+					<a href="/work/floral-ball-4" class="card-item floral-ball-4 floral">
+						<img class="card-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Floral Ball #4</h2>
+							<p class="card-series"></p>
 						</div>
 					</a>
 				</div>
